# phi-server

./: .env  .gitignore  Cargo.toml  README.md  phi-prod.toml
.github/workflows/: release.yml  release_image.yml  tag.yml  test.yml
.sqlx/: query-0f9058a2215fa135c7bd392ec1e991500d913d9677278e84e410e1ed43ba7ca1.json  query-1aa6640edcc754a3ec4d8de85d95fc6d28e5782289127840266419079e1fac7d.json  query-274be8e6b300e00f04ac25dc18b0d693c5dcecba0be560062bbe2b6ff76e9244.json  query-32590d70977a257f616affd9d6e246ffa294b95dee48da9e4c8e975f3b79042b.json  query-3aca49a031a3e33bd7ea406d94bcc56d80c2d5643b8a60872ef3402aa16d7339.json  query-66f8dbb5e7200bdddeae79068c9fcdd6476c2a9efa62aa756c2dc78a8aa8f483.json  query-8a2cd729b51d97c7239a9fc5561783fbaeaf0ddba28de2e97eaa2099a5d97d53.json  query-d82c68a99cb3882d9a36beeab7de9625e7ce8e05f4ab726989bd9f7dd176b83d.json  query-dcb2a5236a8604c975e6b8c7cbe1aa9f3ae376fc007f2bc772a62d1c30984547.json
docker/: Dockerfile
migrations/: 01_init.sql  02_raw_name.sql
src/: auth.rs  client.rs  common.rs  db.rs  log.rs  main.rs  web.rs
src/auth/: apikey.rs  jwt.rs  login.rs  mod.rs  user.rs
src/common/: error.rs  mod.rs  openapi.rs  response.rs  sse.rs
src/ffmpeg/: common.rs  mod.rs  slice.rs  thumbnail.rs
src/material/: biz.rs  material.rs  mod.rs  mvc.rs  storage.rs  upload.rs
src/util/: mod.rs  poem.rs
